# aframe-legacy

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  environment.yaml  pyproject.toml
.github/: filters.yaml
.github/workflows/: ci-tests.yaml  pre-commit.yaml
libs/analysis/: pyproject.toml
libs/analysis/aframe/analysis/: analysis.py  normalizers.py
libs/analysis/aframe/analysis/distributions/: cluster.py  distribution.py
libs/analysis/aframe/analysis/ledger/: events.py  injections.py  ledger.py
libs/analysis/bbhnet/analysis/: normalizers.py  sensitivity.py  vt.py
libs/analysis/bbhnet/analysis/distributions/: cluster.py  distribution.py
libs/analysis/bbhnet/analysis/ledger/: events.py  injections.py  ledger.py
libs/analysis/tests/: test_analysis.py  test_integrators.py  test_normalizers.py  test_sensitive_volume.py  test_vt.py
libs/analysis/tests/distributions/: .test_cluster.py.swp  test_cluster.py  test_distribution.py
libs/analysis/tests/ledger/: test_events.py
libs/architectures/: pyproject.toml
libs/architectures/aframe/architectures/: preprocessor.py  resnet.py  wrapper.py
libs/architectures/bbhnet/architectures/: __init__.py  preprocessor.py  resnet.py
libs/architectures/tests/: test_resnet.py
libs/base/: pyproject.toml
libs/data/: pyproject.toml
libs/data/bbhnet/data/: __init__.py  dataloader.py  distributions.py  glitch_sampler.py  utils.py  waveform_sampler.py
libs/data/bbhnet/data/transforms/: __init__.py  highpass.py  standard_scaler.py  transform.py  whitening.py
libs/data/tests/: conftest.py  test_dataloader.py  test_distributions.py  test_glitch_sampler.py  test_utils.py  test_waveform_injection.py  test_waveform_sampler.py
libs/data/tests/test_transforms/: test_standard_scaler.py  test_transform.py  test_whitening.py
libs/deploy/: pyproject.toml
libs/injection/: pyproject.toml
libs/injection/bbhnet/injection/: __init__.py  injection.py  priors.py
libs/injection/tests/: test_injection.py
libs/io/: pyproject.toml
libs/io/bbhnet/io/: h5.py  timeslides.py
libs/logging/: pyproject.toml
libs/logging/aframe/: logging.py
libs/parallelize/: pyproject.toml
libs/parallelize/tests/: test_parallelize.py
libs/priors/: priors.py  pyproject.toml
libs/priors/aframe/priors/: priors.py  utils.py
libs/priors/bbhnet/priors/: priors.py  utils.py
libs/trainer/: pyproject.toml
libs/trainer/aframe/trainer/: trainer.py
libs/trainer/bbhnet/trainer/: trainer.py  wrapper.py
libs/trainer/tests/: test_wrapper.py
projects/data-generation/: pyproject.toml
projects/data-generation/generate_glitches/: generate_glitches.py
projects/data-generation/generate_waveforms/: generate_waveforms.py
projects/generate-glitch-dataset/: generate.py  generate_glitches.py  pyproject.toml  utils.py
projects/generate-glitch-dataset/tests/: test_generate_glitches.py  test_veto.py
projects/generate_background/: generate_background.py
projects/generate_glitches/: generate_glitches.py  pyproject.toml
projects/generate_glitches/tests/: test_generate_glitches.py
projects/generate_waveforms/: pyproject.toml
projects/longevity/: pyproject.toml
projects/microservice/: pyproject.toml
projects/microservice/evaluation/: environment.yaml  evaluation.py  pyproject.toml
projects/microservice/generate_test_set/: environment.yaml  generate_test_set.py  pyproject.toml
projects/microservice/omicron/: environment.yaml  log.txt  pyproject.toml
projects/microservice/omicron/bbhnet_omicron/: collect.py  condor.py  omicron.py
projects/microservice/trainer/: pyproject.toml
projects/microservice/trainer/trainer/: trainer.py
projects/microservice/utils/: pyproject.toml
projects/microservice/utils/microservice/: deployment.py
projects/sandbox/: pyproject.toml
projects/sandbox/analyze/: analyze.py  pyproject.toml  tools.py  utils.py
projects/sandbox/analyze/analyze/: main.py  utils.py
projects/sandbox/datagen/: environment.yaml  pyproject.toml
projects/sandbox/datagen/tests/: conftest.py
projects/sandbox/export/: export.py  pyproject.toml
projects/sandbox/export/export/: main.py  snapshotter.py
projects/sandbox/export/tests/: test_export.py
projects/sandbox/generate_background/: generate_background.py  pyproject.toml
projects/sandbox/generate_background/tests/: test_generate_background.py
projects/sandbox/generate_glitches/: environment.yaml  generate_glitches.py  pyproject.toml
projects/sandbox/generate_waveforms/: README.md  generate_waveforms.py  pyproject.toml
projects/sandbox/generate_waveforms/priors/: nonspin_BBH.prior
projects/sandbox/generate_waveforms/tests/: test_generate_waveforms.py
projects/sandbox/infer/: infer.py  pyproject.toml
projects/sandbox/infer/infer/: callback.py  deploy.py  main.py  utils.py
projects/sandbox/infer/tests/: test_callback.py  test_infer.py
projects/sandbox/mdc/: pyproject.toml
projects/sandbox/mdc/infer/: main.py
projects/sandbox/mdc/mdc/: deploy.py
projects/sandbox/plots/: pyproject.toml
projects/sandbox/plots/plots/: sensitive_volume.py
projects/sandbox/timeslide_injections/: README.md  pyproject.toml  timeslide_injections.py
projects/sandbox/timeslide_injections/tests/: test_circular_shift.py  test_timeslide_injections.py
projects/sandbox/timeslide_injections/timeslide_injections/: main.py  utils.py
projects/sandbox/train/: pyproject.toml  train.py
projects/sandbox/train/tests/: test_augmentations.py  test_augmentor.py  test_data_structures.py  test_glitch_loader.py  test_train.py
projects/sandbox/train/train/: __init__.py  augmentor.py  data_structures.py  glitch_loader.py  glitch_sampler.py  train.py  utils.py  validation.py
projects/sandbox/visualize/: pyproject.toml  visualize.py
projects/sandbox/vizapp/: pyproject.toml
projects/sandbox/vizapp/vizapp/: Untitled-1.ipynb  Untitled.ipynb  app.py  distributions.py  main.py  priors.py  vetoes.py  vt.py
projects/timeslide_injections/: pyproject.toml  timeslide_injections.py
projects/timeslide_injections/tests/: test_timeslide_injections.py
(+29 files in other folders)
