[tool.poetry]
name = "bbhnet-logging"
version = "0.1.0"
description = "Basic logging utilities"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"
# readme = "README.md"
packages = [{include = "bbhnet"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
