[tool.poetry]
name = "bbhnet.priors"
version = "0.1.0"
description = "Standardized priors for BBHnet"
authors = ["William Benoit, Ethan Jacob Marx <ethan.marx@ligo.org>"]
license = "MIT"
packages = [{include = "bbhnet"}]

[tool.poetry.dependencies]
python = "^3.9"
bilby = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
