[tool.poetry]
name = "aframe.priors"
version = "0.1.0"
description = "Standardized priors for aframe"
authors = ["William Benoit <benoi090@umn.edu>, Ethan Jacob Marx <ethan.marx@ligo.org>"]
license = "MIT"
packages = [{include = "aframe"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
bilby = "^2.1.2"
astropy = "^5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
