[tool.poetry]
name = "evaluation"
version = "0.1.0"
description = "BBHNet production evaluation"
authors = ["william.benoit <william.benoit@ligo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
mldatafind = {git = "https://github.com/ML4GW/mldatafind.git", branch = "main"}
typeo = {git = "https://github.com/ML4GW/typeo.git", branch = "main"}

"bbhnet.io" = {path = "../../../libs/io", develop = true}
"bbhnet.logging" = {path = "../../../libs/logging", develop = true}
"bbhnet.parallelize" = {path = "../../../libs/parallelize", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
