[tool.poetry]
name = "bbhnet_omicron"
version = "0.1.0"
description = "Online omicron deployment"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
typeo = {git = "https://github.com/ML4GW/typeo.git", branch = "main"}
mldatafind = {git = "https://github.com/ML4GW/mldatafind.git", branch = "main"}

[tool.poetry.scripts]
omicron-online = "bbhnet_omicron.omicron:omicron_online"
omicron-deploy = "bbhnet_omicron.omicron:deploy"

[tool.typeo]
run_dir = "/home/ethan.marx/forks/BBHNet/projects/microservice/omicron/test/"
ifos = ["H1", "L1"]
q_min = 3.3166
q_max = 100
f_min = 23
f_max = 1024
sample_rate = 2048
cluster_dt = 0.5
chunk_duration = 124
segment_duration = 64
overlap = 4
mismatch_max = 0.2
snr_thresh = 5
frame_type = "llhoft"
channel = "GDS-CALIB_STRAIN"
state_flag = "DMT-GRD_ISC_LOCK_NOMINAL:1"
accounting_group = "ligo.dev.o4.cbc.explore.test"
archivedir = "/home/ethan.marx/omicron_triggers/"
log_file = "./log.txt"
verbose = true
runevery = 2
universe = "local"
accounting_user = "ethan.marx"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
