[tool.poetry]
name = "bbhnet_omicron"
version = "0.1.0"
description = "Online omicron deployment"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
typeo = {git = "https://github.com/ML4GW/typeo.git", branch = "main"}
mldatafind = {git = "https://github.com/ML4GW/mldatafind.git", branch = "main"}
microservice = {path = "../utils", develop = true}

[tool.poetry.scripts]
omicron-online = "bbhnet_omicron.omicron:omicron_online"
deploy-omicron-online = "bbhnet_omicron.omicron:deploy"

update-glitches = "bbhnet_omicron.collect:update_glitches"
deploy-update-glitches = "bbhnet_omicron.collect:deploy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
