[tool.poetry]
name = "analyze"
version = "0.1.0"
description = "Project for analyzing the output of timeslides and injections"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
