[tool.poetry]
name = "analyze"
version = "0.1.0"
description = "Project for analyzing the output of timeslides and injections"
authors = ["ethan.marx <ethan.marx@ligo.org>", "Alec Gunny <alecg@.mit.edu"]
license = "MIT"

[tool.poetry.scripts]
analyze = "analyze.main:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
typeo = {git = "https://github.com/ML4GW/typeo.git", branch = "main"}
rich = "^12.4.4"
bokeh = "^2.4.3"

"aframe.io" = {path = "../../../libs/io/", develop = true}
"aframe.logging" = {path = "../../../libs/logging/", develop = true}
"aframe.parallelize" = {path = "../../../libs/parallelize/", develop = true}
"aframe.analysis" = {path = "../../../libs/analysis/", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
