[tool.poetry]
name = "timeslide_injections"
version = "0.0.1"
description = "Create timeslides with and without GWs injected"
authors = ["Will Benoit <william.benoit@ligo.org>",]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
"hermes.typeo" = "^0.1.4"
"bbhnet.injection" = {path="../../../libs/injection", develop=true}
"bbhnet.io" = {path = "../../../libs/io/", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
timeslide_injections = "timeslide_injections:main"



[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
