[tool.poetry]
name = "timeslide_injections"
version = "0.0.1"
description = "Create timeslides with and without GWs injected"
authors = ["Will Benoit <william.benoit@ligo.org>",]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
"hermes.typeo" = "^0.1.4"
"bbhnet.injection" = {path="../../../libs/injection", develop=true}
"bbhnet.io" = {path = "../../../libs/io/", develop = true}
"bbhnet.logging" = {path = "../../../libs/logging/", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
timeslide_injections = "timeslide_injections:main"

[tool.typeo]
start = 1262588390
stop = 1262698390
outdir = "/home/ethan.marx/bbhnet/timeslide_injections/"
prior_file = "/home/ethan.marx/forks/BBHnet/projects/sandbox/timeslide_injections/priors/nonspin_BBH.prior"
spacing = 60
buffer = 10
n_slides = 100
shifts = [0, 1]
ifos = ['H1', 'L1']
file_length = 4096
fmin = 32
sample_rate = 2048
channel = "DCS-CALIB_STRAIN_CLEAN_C01"
frame_type = "HOFT_C01"
state_flag = "DCS-ANALYSIS_READY_C01:1"


[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
